# happy-alex-example

./: .gitignore  CalcLexer.x  CalcParser.y  CalcParserBase.hs  CalcParserData.hs  CalcParserUser.hs  LICENSE  Main.hs  README.md  TIPS  happy-alex-example.cabal  stack.yaml
src/: Calc.hs  Main.hs
src/Calc/: Base.hs  Data.hs  Lexer.x  Parser.y  Wrapper.hs
