name:                happy-alex-example
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Dan Aloni <alonid@gmail.com
maintainer:          (none)
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable happy-alex-example
  main-is:             Main.hs
  other-modules:       CalcParser
                     , CalcLexer
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , bytestring
                     , array
  -- hs-source-dirs:
  build-tools:         happy, alex
  default-language:    Haskell2010