name:                happy-alex-example
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Dan Aloni <alonid@gmail.com
maintainer:          (none)
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable happy-alex-example
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Calc
                     , Calc.Parser
                     , Calc.Lexer
                     , Calc.Data
                     , Calc.Base
                     , Calc.Wrapper
  -- other-extensions:
  build-depends:       base >=4.7
                     , bytestring
                     , array
  -- hs-source-dirs:
  build-tools:         happy, alex
  default-language:    Haskell2010
  ghc-options:         -Wall
